fix: add selected state style for device icon in high-contrast theme

--- a/packages/vscode-extension/src/webview/styles/theme.css
+++ b/packages/vscode-extension/src/webview/styles/theme.css
@@ -341,4 +341,5 @@ body.vscode-high-contrast {
   --swm-button-background: var(--vscode-menu-border);
   --swm-button: var(--vscode-input-background);
   --swm-button-hover: var(--vscode-input-background);
+  --swm-device-icon-selected: var(--swm-button)
 }
